2008-07-30  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c (TclNREvalObjEx): new comments and code reorg
	to clarify what is happening.

	* generic/tclBasic.c: guard against the value of iPtr->evalFlags
	changing between the times where TEOV and TEOV_exception
	run. Thanks dgp for catching this.
	
2008-07-29  Miguel Sofer  <msofer@users.sf.net>

	* tests/NRE.test: new tests that went MIA in the NRE revamping
	
	* generic/tclBasic.c:    Clean up
	* generic/tclNRE.h:     
	* generic/tclExecute.c:  
	
	* generic/tclBasic.c:  Made use of the thread's alloc cache
	* generic/tclInt.h:    stored in the ekeko at interp creation
	* generic/tclNRE.h:    to avoid hitting the TSD each time an 
	* generic/tclThreadAlloc.c: NRE callback is pushed or pulled; the
	approach is suitably general to extend to evry other obj
	allocation where an interp is know; this is left for some other
	time, requires a lot of grunt work.

	* generic/tclExecute.c:  fix [Bug 2030670] that cause
	TclStackRealloc to panic on rare corner cases. Thx ajpasadyn for
	diagnose and patch.

	* generic/tcl.decls:     Completely revamped NRE implementation,
	* generic/tclBasic.c:    with (almost) unchanged API.
	* generic/tclCompile.h:
	* generic/tclExecute.c:  TEBC will require a bit of a facelift,
	* generic/tclInt.decls:  but TEOV at least looks great now. 
	* generic/tclInt.h:      There are new tests (incomplete!) to verify
	* generic/tclInterp.c:   that execution is indeed in the same TEBC
	* generic/tclNRE.h:      instance, at the same level in all stacks
	* generic/tclNamesp.c:   involved. Tailcalls are still a bit leaky,
	* generic/tclOOBasic.c:  still deserving to be in tcl::unsupported.
	* generic/tclOOMethod.c:
	* generic/tclProc.c:     Uninit'd var warnings in TEBC with -O2, no
	* generic/tclTest.c:     warnings otherwise.

2007-07-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/FileSystem.3:        CONSTified many functions using Tcl_FileSystem