@@ -19,6 +19,7 @@
 
 #define TCL_TEST
 #include "tclInt.h"
+#include "tclNRE.h"
 
 /*
  * Required for Testregexp*Cmd
@@ -6545,7 +6546,9 @@ TestNRELevels(
     static ptrdiff_t *refDepth = NULL;
     ptrdiff_t depth;
     Tcl_Obj *levels[5];
-
+    int i = 0;
+    TEOV_callback *cbPtr = ((Interp *) interp)->execEnvPtr->callbackPtr;
+    
     if (refDepth == NULL) {
 	refDepth = &depth;
     }
@@ -6558,8 +6561,14 @@ TestNRELevels(
     levels[3] = Tcl_NewIntObj(iPtr->varFramePtr->level);
     levels[4] = Tcl_NewIntObj((iPtr->execEnvPtr->execStackPtr->tosPtr
 		    - iPtr->execEnvPtr->execStackPtr->stackWords));
+
+    while (cbPtr) {
+	i++;
+	cbPtr = cbPtr->nextPtr;
+    }
+    levels[5] = Tcl_NewIntObj(i);
     
-    Tcl_SetObjResult(interp, Tcl_NewListObj(5, levels));
+    Tcl_SetObjResult(interp, Tcl_NewListObj(6, levels));
     return TCL_OK;
 }
 
